--- a/apps/cpu_intensive/src/index.css
+++ b/apps/cpu_intensive/src/index.css
@@ -1,3 +1,7 @@
+/*
+  @author molant <https://github.com/molant>
+  https://github.com/crossplatform-dev/xplat-challenges/blob/main/cpu/electron/src/index.css
+*/
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   margin: auto;
